--- a/addon/locale/it/LC_MESSAGES/nvda.po
+++ b/addon/locale/it/LC_MESSAGES/nvda.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: promemoria-0.2-dev\n"
 "Report-Msgid-Bugs-To: 'nvda-translations@groups.io'\n"
-"POT-Creation-Date: 2020-08-30 16:00+0200\n"
-"PO-Revision-Date: 2020-08-30 16:02+0100\n"
+"POT-Creation-Date: 2022-03-19 16:21+0100\n"
+"PO-Revision-Date: 2022-03-19 16:59+0100\n"
 "Last-Translator: Chris <llajta2012@gmail.com>\n"
 "Language-Team: Translators <translators@translators.com>\n"
 "Language: it\n"
@@ -14,60 +14,98 @@ msgstr ""
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+#. Translators: name of a submenu.
+#: addon\globalPlugins\promemoria\__init__.py:37
+msgid "Pro&memoria"
+msgstr "Pro&Memoria"
+
+#. Translators: the name of a menu item.
+#: addon\globalPlugins\promemoria\__init__.py:39
+msgid "Insert Pro&memoria"
+msgstr "Aggiungi un Pro&memoria"
+
+#. Translators: the name of a menu item.
+#: addon\globalPlugins\promemoria\__init__.py:42
+msgid "&Check updates"
+msgstr "&Controlla Aggiornamenti..."
+
 #. Translators: message presented in input mode.
-#: addon\globalPlugins\promemoria\__init__.py:46
+#: addon\globalPlugins\promemoria\__init__.py:68
 msgid "Show the promemoria dialog."
 msgstr "visualizza la finestra per aggiungere un promemoria."
 
+#: addon\globalPlugins\promemoria\__init__.py:90
+msgid "The current version {ver} is the latest."
+msgstr "L'attuale versione  {ver} è l'ultima disponibile."
+
+#: addon\globalPlugins\promemoria\__init__.py:90
+msgid "Promemoria addon  is up to date!"
+msgstr "Il componente Promemoria è aggiornato."
+
 #. Translators: Title for the Reminder dialog.
-#: addon\globalPlugins\promemoria\__init__.py:57
+#: addon\globalPlugins\promemoria\__init__.py:98
 msgid "Actung!"
 msgstr "Attenzione! "
 
-#: addon\globalPlugins\promemoria\__init__.py:64
+#: addon\globalPlugins\promemoria\__init__.py:105
 msgid "&Ok"
 msgstr "&Ok"
 
 #. Translators: The label for a button.
-#: addon\globalPlugins\promemoria\__init__.py:67
+#: addon\globalPlugins\promemoria\__init__.py:108
 msgid "&Remove reminder"
 msgstr "&Non ricordarmelo più"
 
 #. Translators: Confirmation warnig.
-#: addon\globalPlugins\promemoria\__init__.py:82
+#: addon\globalPlugins\promemoria\__init__.py:123
 msgid "Are you sure you want to delete this reminder?"
 msgstr "Sei sicuro di voler cancellare questo promemoria?"
 
 #. Translators: Title of Confirm warnig
-#: addon\globalPlugins\promemoria\__init__.py:84
+#: addon\globalPlugins\promemoria\__init__.py:125
 msgid "Confirm"
 msgstr "Conferma..."
 
-#. Translators: The title of the promemoria dialog.
-#: addon\globalPlugins\promemoria\__init__.py:109
+#. Translators: Title of the promemoria dialog.
+#: addon\globalPlugins\promemoria\__init__.py:150
 msgid "Promemoria"
 msgstr "ProMemoria"
 
 #. Translators: The label of an edit box in the  dialog.
-#: addon\globalPlugins\promemoria\__init__.py:114
+#: addon\globalPlugins\promemoria\__init__.py:155
 msgid "&Event:"
 msgstr "&Avvenimento"
 
-#. gui.guiHelper.LabeledControlHelper(self, promemoriaLabel, wx.TextCtrl, style=wx.TE_MULTILINE )
-#. self.promemoriaEdit = promemoriaLabeledCtrl.control
 #. Translators: The label of a list box.
-#: addon\globalPlugins\promemoria\__init__.py:119
+#: addon\globalPlugins\promemoria\__init__.py:159
 msgid "Select &day"
 msgstr "Imposta il &giorno:"
 
 #. Translators: The label of a list box.
-#: addon\globalPlugins\promemoria\__init__.py:126
+#: addon\globalPlugins\promemoria\__init__.py:166
 msgid "Select &mounth"
 msgstr "Imposta il &mese:"
 
-#: addon\globalPlugins\promemoria\__init__.py:163
+#: addon\globalPlugins\promemoria\__init__.py:203
 msgid "Do you remember? "
 msgstr "Ti ricordi? "
+
+#. Translators: The title of the check  updates dialog.
+#: addon\globalPlugins\promemoria\__init__.py:216
+msgid "New Version Notification"
+msgstr "Nuova versione disponibile."
+
+#. Translators: Message displayed when updates are available.
+#: addon\globalPlugins\promemoria\__init__.py:220
+msgid ""
+"...\n"
+"Change log not available in dis moment...\n"
+msgstr ""
+
+#. Translators: The label of a button.
+#: addon\globalPlugins\promemoria\__init__.py:223
+msgid "Proceed to &download page"
+msgstr "Vai alla pagina di &download "
 
 #. Add-on summary, usually the user visible name of the addon.
 #. Translators: Summary for this add-on to be shown on installation and add-on information.
